syntax = "proto3";

package auth;

option go_package = "github.com/Acad600-TPA/WEB-MV-242/auth/proto";

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  
  rpc Register(RegisterRequest) returns (RegisterResponse) {}
  
  rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  User user = 2;
  bool success = 3;
  string message = 4;
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  User user = 2;
  string message = 3;
}

message User {
  string id = 1;
  string username = 2;
  string email = 3;
  string role = 4;
} 